Fix search modal not showing on mobile

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -262,3 +262,7 @@ Responsive
         padding: 10px;
     }
 }
+@media (max-width: 575px){
+ul#nav-desktop {
+    display: block !important;
+}}
